# arabic-fix

.cursor/plans/: minimax-gmail-email-agent.md
.github/workflows/: publish.yml
VSCode/AliSahawy/: minimax-gmail-email-agent.md
arabic-fix/: .gitignore  AGENTS.md  README.md  pyproject.toml
arabic-fix 2/: .gitignore
arabic-fix 2/.harness/reins/arabic-content-architect/memory/: MEMORY.md
arabic-fix 2/arabic_fix/: cli.py
arabic-fix 2/tests/: conftest.py  test_bidi.py
arabic-fix 3/: AGENTS.md
arabic-fix 3/agents/verification/: case-01-terminal-print.md  case-13-rtl-email-subject.md
arabic-fix 3/examples/: sample_input.txt
arabic-fix 3/tests/: test_cli.py
arabic-fix 3/tests/corpus/: app_ui.py
arabic-fix 4/: README.md
arabic-fix 4/.harness/: agent.md
arabic-fix 4/.harness/reins/arabic-content-architect/: agent.md
arabic-fix 4/.harness/reins/arabic-content-architect/opencode/: opencode.json
arabic-fix 4/arabic_fix/: fixer.py  normalize.py  py.typed
arabic-fix 4/designs/: font-stack.md  tokens.json
arabic-fix 4/tests/corpus/: __init__.py  aljazeera_headlines.py  quran.py
arabic-fix 5/: LICENSE
arabic-fix 5/.github/workflows/: ci.yml
arabic-fix 5/arabic_fix/: bidi.py
arabic-fix 5/docs/: before-after.md
arabic-fix 5/tests/: test_fixer.py
arabic-fix/.github/workflows/: publish.yml
arabic-fix/agents/: eval_cases.md  system_prompt.md
arabic-fix/agents/verification/: case-04-html-heading.md  cursor-verified.md
arabic-fix/arabic_fix/: __init__.py  bidi.py  cli.py  fixer.py  normalize.py  shaper.py
arabic-fix/designs/: rtl-rules.md  tokens.README.md  tokens.json  tokens.schema.json  validate_tokens.py
arabic-fix/docs/: problem.md  roadmap.md
arabic-fix/examples/: demo.py  sample-arabic-page.html
arabic-fix/examples/integrations/style-dictionary/: README.md  package.json  sd.config.js  verify.cjs
arabic-fix/tests/: conftest.py  test_bidi.py  test_cli.py  test_shaper.py
arabic-fix/tests/corpus/: edge_cases.py
