[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-fix"
version = "0.1.0"
description = "Fix Arabic text rendering across code, AI agents, and designs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "arabic-fix contributors" }
]
keywords = ["arabic", "rtl", "bidirectional", "reshaper", "bidi", "unicode", "i18n", "l10n"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Arabic",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.2",
]

[project.urls]
Homepage = "https://github.com/your-org/arabic-fix"
Issues = "https://github.com/your-org/arabic-fix/issues"

[project.scripts]
arabic-fix = "arabic_fix.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
arabic_fix = ["py.typed"]
