[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-fix"
version = "0.4.1"
description = "Fix Arabic text rendering across code, AI agents, and designs."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Mahmoud ElHassan",
      email = "mahmoudelhassan9@gmail.com" 
    }
]
keywords = ["arabic", "rtl", "bidirectional", "reshaper", "bidi", "unicode", "i18n", "l10n"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: Arabic",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.2",
]

[project.optional-dependencies]
# Dev deps for tests, lint, type check. Install with:
#   pip install -e ".[dev]"
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.7",
]

[project.urls]
Homepage = "https://github.com/your-org/arabic-fix"
Issues = "https://github.com/your-org/arabic-fix/issues"

[project.scripts]
arabic-fix = "arabic_fix.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
arabic_fix = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["arabic_fix"]
show_error_codes = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true